// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`District Info not selected  1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Memo(DistrictInfo)
    active={false}
    district={
      Object {
        "image": "url",
        "indexes": Object {
          "energy": 23,
          "facilities": 23,
          "mobility": 74,
          "security": 62,
        },
        "info": Object {
          "info": Object {
            "extrusion": Array [
              "59",
              "88",
              "79",
              "78",
              "80",
              "32",
              "8",
              "2",
              "4",
              "22",
              "3",
              "5",
              "60",
            ],
            "id": "1",
            "latitude": 53.54310552517575,
            "location": "Edmonton, Canada",
            "longitude": -113.49581660415623,
            "name": "Telus HQ",
            "zoom": 15.721944548645808,
          },
        },
      }
    }
    onClick={[MockFunction]}
  >
    <div
      className="district-card m-4"
      onClick={[Function]}
    >
      <div
        className="row px-4"
      >
        <div
          className="col-7 p-0"
        >
          <div
            className=""
          >
            <img
              alt="district"
              className="img-fluid"
              src="url"
            />
          </div>
          <div
            className="desc"
          >
            <h5>
              Telus HQ
            </h5>
            <p>
              Edmonton, Canada
            </p>
          </div>
        </div>
        <div
          className="col-5 p-0 pl-1 d-flex justify-content-between  flex-column"
        >
          <div
            className="insights-info"
          >
            <p>
              <span>
                23
              </span>
               
              <small>
                Energy
              </small>
            </p>
          </div>
          <div
            className="insights-info"
          >
            <p>
              <span>
                23
              </span>
               
              <small>
                Economy
              </small>
            </p>
          </div>
          <div
            className="insights-info"
          >
            <p>
              <span>
                62
              </span>
               
              <small>
                Security
              </small>
            </p>
          </div>
          <div
            className="insights-info"
          >
            <p>
              <span>
                74
              </span>
               
              <small>
                Mobility
              </small>
            </p>
          </div>
        </div>
      </div>
    </div>
  </Memo(DistrictInfo)>
</Provider>
`;

exports[`District Info selected  1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Memo(DistrictInfo)
    active={true}
    district={
      Object {
        "image": "url",
        "indexes": Object {
          "energy": 23,
          "facilities": 23,
          "mobility": 74,
          "security": 62,
        },
        "info": Object {
          "info": Object {
            "extrusion": Array [
              "59",
              "88",
              "79",
              "78",
              "80",
              "32",
              "8",
              "2",
              "4",
              "22",
              "3",
              "5",
              "60",
            ],
            "id": "1",
            "latitude": 53.54310552517575,
            "location": "Edmonton, Canada",
            "longitude": -113.49581660415623,
            "name": "Telus HQ",
            "zoom": 15.721944548645808,
          },
        },
      }
    }
    onClick={[MockFunction]}
  >
    <div
      className="district-card m-4"
      onClick={[Function]}
    >
      <div
        className="row px-4"
      >
        <div
          className="col-7 p-0"
        >
          <div
            className="active"
          >
            <img
              alt="district"
              className="img-fluid"
              src="url"
            />
          </div>
          <div
            className="desc"
          >
            <h5>
              Telus HQ
            </h5>
            <p>
              Edmonton, Canada
            </p>
          </div>
        </div>
        <div
          className="col-5 p-0 pl-1 d-flex justify-content-between  flex-column"
        >
          <div
            className="insights-info"
          >
            <p>
              <span>
                23
              </span>
               
              <small>
                Energy
              </small>
            </p>
          </div>
          <div
            className="insights-info"
          >
            <p>
              <span>
                23
              </span>
               
              <small>
                Economy
              </small>
            </p>
          </div>
          <div
            className="insights-info"
          >
            <p>
              <span>
                62
              </span>
               
              <small>
                Security
              </small>
            </p>
          </div>
          <div
            className="insights-info"
          >
            <p>
              <span>
                74
              </span>
               
              <small>
                Mobility
              </small>
            </p>
          </div>
        </div>
      </div>
    </div>
  </Memo(DistrictInfo)>
</Provider>
`;
